--- a/src/Style/Search.css
+++ b/src/Style/Search.css
@@ -24,6 +24,15 @@ font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 20px;
     position:absolute;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-
-
+}
+@media screen and (max-width: 500px) {
+    .errorSearch{
+        color: red;
+        /* background-color: rgba(0, 0, 0, 0.479); */
+        font-size: 12px;
+        position:absolute;
+        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    
+    
+    }
 }
