--- a/src/Style/Loading.css
+++ b/src/Style/Loading.css
@@ -1,72 +1,35 @@
 
 .spinner {
-    width: 56px;
-    height: 56px;
-    border: 6.7px solid #474bff;
-    animation: spinner-kk2y8v 3s infinite;
-    margin-left: 640px;
-    margin-top: 100px;
- }
- @keyframes spinner-kk2y8v {
-    0% {
-       transform: rotate(0deg);
-    }
- 
-    10%, 15% {
-       transform: rotate(-90deg);
-    }
- 
-    20%, 25% {
-       transform: rotate(-180deg);
-    }
- 
-    30%, 35% {
-       transform: rotate(-270deg);
-    }
- 
-    40%, 50% {
-       transform: rotate(-360deg);
-    }
- 
-    100% {
-       transform: rotate(720deg);
-    }
- }
+  width: 56px;
+  height: 56px;
+  border: 6.7px solid var(--primaryColor);
+  animation: spinner-kk2y8v 3s infinite;
+  margin: 0 auto;
+  padding: 0 auto;
+}
+@keyframes spinner-kk2y8v {
+  0% {
+     transform: rotate(0deg);
+  }
 
- @media screen and (max-width: 500px) {
-   .spinner {
-      width: 56px;
-      height: 56px;
-      border: 6.7px solid #474bff;
-      animation: spinner-kk2y8v 3s infinite;
-      margin-left: 158px;
-      margin-top: 100px;
-   }
-   @keyframes spinner-kk2y8v {
-      0% {
-         transform: rotate(0deg);
-      }
-   
-      10%, 15% {
-         transform: rotate(-90deg);
-      }
-   
-      20%, 25% {
-         transform: rotate(-180deg);
-      }
-   
-      30%, 35% {
-         transform: rotate(-270deg);
-      }
-   
-      40%, 50% {
-         transform: rotate(-360deg);
-      }
-   
-      100% {
-         transform: rotate(720deg);
-      }
-   }
+  10%, 15% {
+     transform: rotate(-90deg);
+  }
 
+  20%, 25% {
+     transform: rotate(-180deg);
+  }
+
+  30%, 35% {
+     transform: rotate(-270deg);
+  }
+
+  40%, 50% {
+     transform: rotate(-360deg);
+  }
+
+  100% {
+     transform: rotate(720deg);
+  }
 }
 
