--- a/src/Style/GameDetail.css
+++ b/src/Style/GameDetail.css
@@ -1,69 +1,62 @@
  
  .CardDetail{
-   width: 800px;
-   height: auto;
-   background-color: rgba(31, 32, 56, 0.753);
-   position: relative;
-   margin-left: 300px;
- }
- .imagenDetail{
-   height: 400px;
-   width: 700px;
- }
- .titleDetail{
-   font-size: 50px;
-   color: cadetblue;
-   font-family: serif;
-   
-
- }
- .infosDetail{
-   display: flex;
-   align-items: baseline;
-   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  width: 800px;
+  height: auto;
+  background-color: var(--secondaryBackground);
+  position: relative;
+  margin-left: 300px;
+}
+.imagenDetail{
+  height: 400px;
+  width: 700px;
+  object-fit: cover;
+}
+.titleDetail{
+  font-size: 50px;
+  color:var(--primaryColor);
+  font-family: serif;
+}
+.infosDetail{
+  display: flex;
+  align-items: baseline;
+}
+.botonDeleteJuego{
+  background-color: var(--btnDelete);
+  color: var(--white);
+  border-radius: 6px;
+  border:1px solid var(--white);
+  padding: 5px;
+  font-size: 20px;
+  display: flex;
 
 }
-
- .botonDeleteJuego{
-   background-color: #4e0000d0;
-   color: white;
-   border-radius: 6px;
-   border-color: white;
-   padding: 5px;
-   font-size: 20px;
-   display: flex;
-   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-
+.botonDeleteJuego:hover{
+  background-color:var(--primaryColor);
 }
- .botonDeleteJuego:hover{
-   background-color: rgba(63, 2, 2, 0.603);
- }
-
 .backDetail{
-   text-decoration: none;
-   background-color: #000236a1;
-   color: cadetblue;
-   border-radius: 6px;
-   border-color: cadetblue;
-   padding: 5px;
-   font-size: 18px;
-   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-   display: flex;
+  text-decoration: none;
+  background-color:var( --secondaryBackground);
+  color:var(--primaryColor);
+  border-radius: 3px;
+  border:1px solid var(--primaryColor);
+  padding: 5px;
+  font-size: 18px;
+  display: flex;
 }
 .linkRegresar{
-   text-decoration: none;
+  text-decoration: none;
 }
 
 @media screen and (max-width: 500px) {
-   .CardDetail{
-      width: 400px;
-      margin-left:0px;
-    }
-    .imagenDetail{
-      height: 200px;
-      width: 300px;
-    }
-    .titleDetail{
-      font-size: 40px;
-    }
- }
+  .CardDetail{
+     width: 400px;
+     margin-left:0px;
+   }
+   .imagenDetail{
+     height: 200px;
+     width: 300px;
+   }
+   .titleDetail{
+     font-size: 40px;
+   }
+}
