--- a/src/Style/NavBar.css
+++ b/src/Style/NavBar.css
@@ -37,6 +37,8 @@
     height: 100%;
     width: 100%;
     align-items: center;
+    text-decoration: none;
+    border-radius: 5px;
 }
 
 .list-item a {
@@ -44,6 +46,7 @@
     height: 10%;
     padding: 10px 6px ;
     border-bottom: 10px solid transparent;
+    border: 1px solid var(--primaryColor);
 }
 
 .list-item a:hover{
