--- a/src/Style/NavBar.css
+++ b/src/Style/NavBar.css
@@ -50,6 +50,6 @@
 }
 
 .list-item a:hover{
-    background-color:var(--secondaryBackground);
-    color:var(--white);
+    background-color: var(--greyDark);
+    color: var(--white);
 }
