--- a/src/Style/CardGame.css
+++ b/src/Style/CardGame.css
@@ -15,6 +15,7 @@ margin-bottom: 10px;
   height: 300px;
   padding-left: 50px;
   object-fit: cover;
+  margin: 0 auto;
 }
 .infosCard{
   display: flex;
@@ -24,7 +25,7 @@ margin-bottom: 10px;
 
 .titleCard{
   text-decoration: none;
-  color: var(--white);
+  color: var(--primaryColor);
   font-size: 30px;
   font-family: serif;
 
